--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 <head>
-  <title>Test Slideshow</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Slideshow Calasetta</title>
+
+  <!-- Swiper CSS (open-source) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+  <!-- CSS personalizzato -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Il mio slideshow sarà qui!</h1>
+
+<!-- Slideshow -->
+<div class="swiper">
+  <div class="swiper-wrapper">
+    <div class="swiper-slide"><img src="slide1.jpg" alt="Slide 1"></div>
+    <div class="swiper-slide"><img src="slide2.jpg" alt="Slide 2"></div>
+    <div class="swiper-slide"><img src="slide3.jpg" alt="Slide 3"></div>
+  </div>
+</div>
+
+<!-- Swiper JS -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
